<resources>
    <string name="app_name">eku</string>
    <string name="title">Everywhere Kyonggi Up!</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="subTitle">새로워진 경기대학교 캠퍼스 생활</string>
    <string name="signIn">EKU 로그인</string>
    <string name="signUp">학생증으로 가입하기</string>
    <string name="signUpTitle">회원 가입</string>
    <string name="skipSignIn">로그인 하지 않고 시작하기</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="take_photo_hint">학교에서 발행한 카드형 학생증 혹은 모바일 학생증을\n촬영하거나 갤러리에서 업로드 해주세요</string>
    <string name="skip_camera">건너뛰기</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="name">이름</string>
    <string name="name_hint">이름을 입력해주세요.</string>
    <string name="studentNumber">학번</string>
    <string name="studNo_hint">학번을 입력해주세요.</string>
    <string name="department">학과</string>
    <string name="department_hint">소속 학과를 선택해주세요.</string>
    <string name="email_hint">학교 이메일을 입력해주세요.</string>
    <string name="password_hint">비밀번호를 입력해주세요.</string>
    <string name="password_guide">비밀번호는 8자리 이상, 숫자 포함으로 설정해주세요.</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="confirm_password_hint">비밀번호를 다시 입력해주세요.</string>
    <string name="signup_eku">EKU 회원 가입</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_info">정보 입력</string>
    <string name="signUp_complete">가입 완료</string>
    <string name="signUp_complete_message">EKU 가입 요청이 완료되었습니다.</string>
    <string name="signUp_complete_email">입력하신 메일로 확인 메일이 발송되었습니다.\n메일을 확인 해 주시기 바랍니다.</string>
    <string name="signUp_fill_fields">모든 항목을 작성해주세요.</string>
    <string name="signUp_password_not_valid">비밀번호를 형식에 맞게 작성해주세요.</string>
    <string name="signUp_password_not_matching">비밀번호가 일치하지 않습니다.</string>
    <string name="signUp_duplicated_account">이미 가입된 학번 혹은 이메일입니다.</string>
    <string name="email_guide">학교 이메일을 입력해주세요.</string>
    <string name="password_confirm_right">비밀번호가 일치합니다.</string>
    <string name="password_confirm_wrong">비밀번호가 일치하지 않습니다.</string>
    <string name="name_guide">이름에는 숫자나 특수문자가 포함될 수 없습니다.</string>
    <string name="name_error_dialog">이름을 확인해주세요.</string>
    <string name="kyonggi_mail">\@ kyonggi.ac.kr</string>
    <string name="email_error_dialog">이메일을 확인해주세요.</string>
    <string name="password_guide_right">사용할 수 있는 비밀번호입니다.</string>
    <string name="search_hint_info">글 제목, 내용 혹은 학과를 입력해주세요</string>
    <string name="select">선택</string>
    <string name="no_articles">작성된 글이 없습니다.</string>
</resources>