<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_checkmark_circle_outline" />

    <TextView
        android:id="@+id/sign_up_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_noto_sans_kr"
        android:text="@string/signUp_complete_message"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/black_75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_check" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_noto_sans_kr"
        android:textSize="16sp"
        android:textColor="@color/black_75"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_complete" />
    "

    <TextView
        android:id="@+id/check_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_noto_sans_kr"
        android:text="@string/signUp_complete_email"
        android:textSize="16sp"
        android:textColor="@color/black_75"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_up_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:background="@drawable/rounded_main_tint"
        android:fontFamily="@font/font_noto_sans_kr"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_email" />

</androidx.constraintlayout.widget.ConstraintLayout>